--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>Flask ToDoMVC</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css"/>
-    <link rel="stylesheet" href="../static/app.css"/>
-    <link rel="icon" type="image/x-icon" href="./static/favicon.ico"/>
+    <link rel="stylesheet" href="static/app.css"/>
+    <link rel="icon" type="image/x-icon" href="static/favicon.ico"/>
 </head>
 <body class="container">
 <div class="col-md-6">
@@ -15,9 +15,9 @@
         <ul></ul>
     </div>
 </div>
-<script src="/lib/jquery/dist/jquery.js"></script>
-<script src="../static/app.js"></script>
-<script src="../static/todo.js"></script>
+<script src="../node_modules/jquery/dist/jquery.js"></script>
+<script src="static/app.js"></script>
+<script src="static/todo.js"></script>
 <script type="text/html" id="list_todos">
     <ul class="list-group">
         <% for ( var i = 0; i < todos.length; i++ ) { %>
