--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
     <p><input id="newName" placeholder="Add todo..." class="form-control"/></p>
 
     <div id="todoList">
-        <ul></ul>
+        <ul class="list-group"></ul>
     </div>
 </div>
 <script src="bundle.js"></script>
